--- a/MobileMedia.MarketParser.WebApi/Views/Shared/_Layout.cshtml
+++ b/MobileMedia.MarketParser.WebApi/Views/Shared/_Layout.cshtml
@@ -1,15 +1,19 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <script src="~/Scripts/MyScripts/getappsinfo.js" type="text/javascript"></script>
+    <script src="~/Scripts/MyScripts/renderitemblock.js" type="text/javascript"></script>
+
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -34,6 +38,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/Scripts/MyScripts/modal.js")
     @RenderSection("scripts", required: false)
 
 
@@ -41,5 +46,13 @@
         @RenderBody()
         <hr />
     </div>
+
+    <div id='modal-window'>
+        <div class="modal-close">
+            x
+        </div>
+        <div class="modal-content"></div>
+    </div>
+
 </body>
 </html>
