Fix date to ruformat; delete consoleProject; Add priceparsing;

--- a/MobileMedia.MarketParser.WebApi/Views/Home/Index.cshtml
+++ b/MobileMedia.MarketParser.WebApi/Views/Home/Index.cshtml
@@ -14,11 +14,12 @@
         </div>
 
         <div class="item">
-            <p align="center"><a href="/Home/Task2"><img src="http://cdn01.ru/files/users/images/02/dc/02dce5e808401b0ca6ca2465bce48310.gif" width="367" height="283"/></a></p>
+            <p align="center"><a href="/Home/Task2"><img src="http://razvitierebenka.info/wp-content/gallery/Цифра-2/raskraska_cifra_dwa_-10.jpg" width="367" height="283"/></a></p>
         </div>
 
+        <!-- Хочу посмотреть на 3 слайда -->
         <div class="item">
-            <a href="https:\\vk.com" target="_blank"><p align="center"><img src="https://static3.mtdata.ru/img/367x283/2787677.jpeg" /></p></a> 
+            <a href="https://github.com/Alleshka" target="_blank"><p align="center"><img src="https://static3.mtdata.ru/img/367x283/2787677.jpeg"/></p></a> 
         </div>
     </div>
 
