--- a/MobileMedia.MarketParser.WebApi/Views/Shared/_Layout.cshtml
+++ b/MobileMedia.MarketParser.WebApi/Views/Shared/_Layout.cshtml
@@ -29,6 +29,8 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Домашняя страница", "Index", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Task1", "Task1", "Home", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Task2", "Task2", "Home", new { area = "" }, null)</li>
                 </ul>
             </div>
         </div>
